# contingency-rs

./: .gitignore  Cargo.toml  README.ja.md  README.md  build.rs  cbindgen.toml
docs/: correspondence.md
docs/en/: correspondence.md  protocol.md  swift-legacy-map.md
docs/en/algorithms/: alternative.md  concurrent.md  crf-ext.md  dro-drl-drh.md  fi.md  fleshler-hoffman.md  fr.md  ft.md  limited-hold.md  multiple-chained-tandem.md  progressive-ratio.md  ri.md  rr.md  rt.md  vi.md  vr.md  vt.md
docs/ja/: correspondence.md  protocol.md  swift-legacy-map.md
docs/ja/algorithms/: alternative.md  concurrent.md  crf-ext.md  dro-drl-drh.md  fi.md  fleshler-hoffman.md  fr.md  ft.md  limited-hold.md  multiple-chained-tandem.md  progressive-ratio.md  ri.md  rr.md  rt.md  vi.md  vr.md  vt.md
include/: contingency.h
src/: bridge.rs  builder.rs  constants.rs  errors.rs  ffi.rs  lib.rs  python.rs  schedule.rs  types.rs  uniffi_api.rs  wasm.rs
src/helpers/: checks.rs  fleshler_hoffman.rs  mod.rs
src/hw/: mod.rs  protocols.rs  serial_backend.rs  virtual_apparatus.rs
src/schedules/: adjusting.rs  alternative.rs  aversive.rs  concurrent.rs  conjunctive.rs  differential.rs  interlocking.rs  interpolate.rs  interval.rs  mixed.rs  mod.rs  overlay.rs  percentile.rs  progressive.rs  ratio.rs  response_cost.rs  second_order.rs  sequence.rs  time_based.rs  timeout.rs  trial_based.rs
tests/: bridge.rs  conformance.rs  e2e_c_ffi.rs  e2e_uniffi.rs  e2e_wasm.rs  ffi_smoke.rs  hil_integration.rs  hw_serial_tests.rs  hw_virtual_tests.rs  properties.rs  python_smoke.rs  uniffi_smoke.rs
