[package]
name = "contingency"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reinforcement contingency engine — Rust port of contingency-py. Mirrors the executable specification defined by the Python package and its conformance fixtures."

[lib]
name = "contingency"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "contingency-hil"
path = "src/bin/hil.rs"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"
required-features = ["uniffi"]

[dependencies]
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
indexmap = "2"
pyo3 = { version = "0.22", optional = true, features = ["extension-module", "abi3-py38"] }
uniffi = { version = "0.28", optional = true, features = ["cli"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6"

[features]
default = []
python = ["dep:pyo3"]
uniffi = ["dep:uniffi"]

[build-dependencies]
cbindgen = "0.27"

[dev-dependencies]
proptest = "1"
serde_json = { workspace = true }
