[package]
name = "contingency"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/OperantKit/contingency-rs"
description = "Reinforcement contingency engine — Rust port of contingency-py. Mirrors the executable specification defined by the Python package and its conformance fixtures."

[lib]
name = "contingency"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "contingency-hil"
path = "src/bin/hil.rs"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"
required-features = ["uniffi"]

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indexmap = "2"
pyo3 = { version = "0.22", optional = true, features = ["extension-module", "abi3-py38"] }
uniffi = { version = "0.28", optional = true, features = ["cli"] }
serialport = { version = "4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6"

[features]
default = []
python = ["dep:pyo3"]
uniffi = ["dep:uniffi"]
serial = ["dep:serialport"]

[build-dependencies]
cbindgen = "0.27"

[dev-dependencies]
proptest = "1"
serde_json = "1"

# Release profile is optimised for the bench harness — debug-assert off,
# overflow checks off, single codegen unit so timing measurements are not
# polluted by per-crate optimisation boundaries.
[profile.release]
lto = "thin"
codegen-units = 1
debug = false
